# ai-analysis

./: .gitignore  Dockerfile  README.md  env_sample  setup.py
backend/: CommentAnalysisTask.py  README.md  __init__.py  cmdline.py  middlewares.py  pyproject.toml  requirements.txt  routes.py  temp.py
backend/common/: enums.py  log.py
backend/conf/: __init__.py  config.json  config.py  settings.yml
backend/core/: .env  general_process.py
backend/core/agents/: comment_analysis.py  comments.xlsx  data.py  get_info.py  seeact.py
backend/core/llms/: openai_wrapper.py
backend/domain/: CommentInfo.py
backend/scrape/: deal_note_data.py  main.py  note_info_req.py  temp.py
backend/scrape/data/: hot_tag_list.json
backend/scrape/encrypt/: xs_encrypt.py
backend/service/: BaseService.py  BaseTask.py  CommentAnalysisTask.py  TaskFactory.py
backend/sql_app/: crud.py  demo.py  models.py  schemas.py  social_media_comment_list_curd.py
backend/sql_app/config/: database.py
backend/sql_app/dao/: AnalysisTaskConfigDAO.py  BaseDAO.py  CommentAnalyticsInfoDAO.py  DAOMeta.py  PromptConfigDAO.py  SocialMediaCommentListDAO.py  TaskConfigDAO.py  crud.py
backend/sql_app/dataobject/: AnalysisTaskConfigDO.py  BaseDO.py  CommentAnalyticsInfoDO.py  PromptConfigDO.py  SocialMediaCommentListDO.py  SocialMediaCommentListDo.py  TaskConfigDO.py  models.py
backend/sql_app/domain/: SocialMediaCommentListModel.py
backend/sql_app/vo/: TaskConfigVO.py  (+2 more)
backend/src/: __init__.py
backend/test/: DaoTest.py  SocialMediaCommentListTest.py  TaskTest.py  __init__.py  settings.yml
(+186 files in other folders)
