[project]
name = "ai-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "yohong",email = "fanyohong@gamil.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "dynaconf (>=3.2.6,<4.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "alembic (>=1.14.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
requests = "^2.32.3"
pytest-mock = "^3.14.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.poetry.scripts]
ai_analytics = "ai_analytics.cmdline:main"
